# apps/core/src/routes/v1/media/index.ts
@@ -1,6 +1,7 @@
 import { controllerWrapper } from '@/core/utils';
 import { Router } from 'express';
 import {
+  getDownloadUrl,
   getFontSource,
   getPreSignedDownloadUrl,
   getPreSignedUploadUrl,
@@ -17,6 +18,8 @@ router.get(
   '/pre-signed-download-url/:key',
   ...controllerWrapper(getPreSignedDownloadUrl)
 );
+
+router.get('/download-url/:key', ...controllerWrapper(getDownloadUrl));
 
 router.get('/font/source', ...controllerWrapper(getFontSource));
 
